--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,6 +91,7 @@ workflows:
                 - rc-2.4
                 - rc-2.7
                 - rc-2.9
+                - release
       - upload-tagged:
           filters:
             branches:
